--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,17 @@ futures-util = "0.3"
 
 # Error handling
 thiserror = "1.0"
+anyhow = "1.0"
 
 # Async traits
 async-trait = "0.1"
+
+# Blockchain dependencies
+solana-client = "2.0"
+solana-sdk = "2.0"
+solana-account-decoder = "2.0"
+solana-transaction-status = "2.0"
+solana-program-pack = "2.0"
+spl-token = "6.0"
+ethers = "2.0"
+bs58 = "0.5"
