--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # Database (optional - uncomment if needed)
-# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
 
 # Environment variables
 dotenvy = "0.15"
@@ -51,3 +51,4 @@ solana-program-pack = "2.0"
 spl-token = "6.0"
 ethers = "2.0"
 bs58 = "0.5"
+rand = "0.9.2"
